--- a/css/main.css
+++ b/css/main.css
@@ -1,146 +1,301 @@
-.informationBox{
-  background: red;
-}
-div{
-  padding: 10px;
-}
-body, html{
+*{
   padding: 0px;
   margin: 0px;
+
+  font-family: 'exo' verdana sans-serif;
 }
 
-/*Form box*/
-.transition, form button, form .question label, form .question input[type="text"] {
+html, body, main{
+  width: 100%;
+  height: 97.76%;
+
+  padding: 0px;
+  marging: 0px;
+  clear: both;
+}
+
+article{
+  width: 80%;
+
+  padding: 15px;
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background: #FFDDFF;
+}
+
+main{
+  background: blue;
+}
+
+.centerContent{
+  width: 960px;
+  height: 100%;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 980px){
+  .centerContent{
+    width: inherit;
+  }
+}
+
+footer{
+  height: 3%;
+}
+
+section{
+  clear: both;
+
+  width: 100%;
+
+  padding-top: 7px;
+  padding-bottom: 17px;
+
+  display: block;
+
+  background: #4b5320;
+}
+
+h1{
+  width: 31%;
+  border-bottom: 2px solid black;
+  border-bottom-right-radius: 100%;
+  border-bottom-left-radius: 20%;
+}
+
+/*Temp*/
+.t{
+  background: white;
+}
+/*End temp*/
+
+.btn, .btnPressed{
+  display: inline-block;
+
+  margin-top: 20px;
+  padding: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+  border: #babadf solid 1px;
+}
+.btn{
+  background-color: lightblue;
+  color: black;
+}
+.btnPressed{
+  background: #5a636e;
+  color: white;
+}
+.btn:hover, .btnPressed:hover{
+  cursor: pointer;
+}
+.btn:hover{
+    background: #5a636e;
+    color: white;
+}
+.btnPressed:hover{
+  background: white;
+  color: black;
+}
+
+.finishSection{
+  margin-top: 20px;
+}
+
+/*Question section*/
+.question *:invalid{
+  background-color: rgba(200, 90, 90, 0.2);
+}
+.question{
+  margin-bottom: 5px;
+}
+.question:first-of-type{
+  margin-top: 10px;
+}
+.question:last-of-type{
+  margin: 0px;
+}
+/*Fancy css*/
+nav ul li a, .btn, .question label, .question input[type="text"], .question input[type="date"] {
   -moz-transition: all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);
   -o-transition: all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);
   -webkit-transition: all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);
   transition: all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);
-}
-
-* {
-  font-family: 'indie flower', 'Gloria Hallelujah', Helvetica, sans-serif;
-  font-weight: light;
-  -webkit-font-smoothing: antialiased;
-}
-
-form {
-
-  display: inline-block;
-  max-width: 400px;
-  min-width: 300px;
-  box-sizing: border-box;
-  padding: 30px 25px;
-  background-color: #a58855;
-  border: solid black 1px;
-  border-radius: 40px;
-  margin: 0px 0;
-  -moz-transform: translate(0%, 0%);
-  -ms-transform: translate(0%, 0%);
-  -webkit-transform: translate(0%, 0%);
-  transform: translate(0%, 0%);
-}
-form h1 {
-  color: #aa2233;
-  font-weight: 100;
-  letter-spacing: 0.01em;
-  margin-left: 0px;
-  margin-bottom: 25px;
-  text-transform: uppercase;
-}
-form button {
-  margin-top: 35px;
-  background-color: white;
-  border: 1px solid #aa2233;
-  line-height: 0;
-  font-size: 17px;
-  display: inline-block;
-  box-sizing: border-box;
-  padding: 20px 15px;
-  border-radius: 60px;
-  color: #aa2233;
-  font-weight: 100;
-  letter-spacing: 0.01em;
-  position: relative;
-  z-index: 1;
-}
-form button:hover, form button:focus {
-  color: white;
-  background-color: #aa2233;
-}
-form .question {
-  position: relative;
-  padding: 10px 0;
-}
-form .question:first-of-type {
-  padding-top: 0;
-}
-form .question:last-of-type {
-  padding-bottom: 0;
-}
-form .question label {
+} /* <-- movement*/
+.question label {
   transform-origin: left center;
-  color: #aa2233;
-  font-weight: 100;
-  letter-spacing: 0.01em;
-  font-size: 17px;
+
   box-sizing: border-box;
   padding: 10px 15px;
+
   display: block;
+
+  color: #aa2233;
+  font-weight: 200;
+  letter-spacing: 0.01em;
+  font-size: 17px;
+
   position: absolute;
-  margin-top: -40px;
+  margin-top: -42px;
+  left: 33%;
   z-index: 2;
+
   pointer-events: none;
 }
-form .question input[type="text"], textarea {
+@media screen and (max-width: 980px){
+  .question label{
+    left: 22%;
+  }
+}
+@media screen and (max-width: 800px){
+  .question label{
+    left: 174px;
+  }
+  article{
+    min-width: 620px;
+  }
+  .centerContent{
+    width: 620px;
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+.question input[type="text"], .question input[type="date"]{
   appearance: none;
   background-color: none;
-  border: 1px solid #aa2233;
-  line-height: 0;
-  font-size: 17px;
-  width: 100%;
+
+  width: 60%;
+
   display: block;
   box-sizing: border-box;
-  padding: 10px 15px;
+
+  padding: 9px 15px;
+
+  border: 1px solid #aa2233;
   border-radius: 60px;
+
   color: #535353;
-  font-weight: 100;
+  font-size: 17px;
+  font-weight: 300;
   letter-spacing: 0.01em;
+
   position: relative;
+  left: 15%;
   z-index: 1;
 }
-textarea{
-	height: 90px;
-	padding: 15px;
-	border-radius: 20px;
+.question input[type="text"]:focus {
+  transform: translate(35%, 0%);
 
-	line-height: 1;
-}
-form .question input[type="text"]:focus, textarea:focus {
   outline: none;
   background: #aa2233;
   color: white;
-  margin-top: 15px;
 }
-textarea:focus{
-	margin-top: 0px;
+
+.question input[type="text"]:valid, .question input[type="date"]{
+  margin-left: 20%;
 }
-form .question input[type="text"]:valid{
-  margin-top: 30px;
+.question input[type="text"]:valid:focus{
+  margin: 0px;
 }
-textarea:valid{
-	margin-top: 0px;
+.question input[type="text"]:focus ~ label{
+  -moz-transform: translate(-120%, 0px);
+  -ms-transform: translate(-120%, 0px);
+  -webkit-transform: translate(-120%, 0px);
+  transform: translate(-120%, 0px);
+
+  color: black;
+  font-weight: bold;
 }
-form .question input[type="text"]:focus ~ label, textarea:focus ~ label {
-  -moz-transform: translate(0, -35px);
-  -ms-transform: translate(0, -35px);
-  -webkit-transform: translate(0, -35px);
-  transform: translate(0, -35px);
+#modum:focus ~ label{
+  -moz-transform: translate(-45%, 0px);
+  -ms-transform: translate(-45%, 0px);
+  -webkit-transform: translate(-45%, 0px);
+  transform: translate(-45%, 0px);
 }
-form .question input[type="text"]:valid ~ label, textarea:valid ~ label {
+
+.question input[type="text"]:valid ~ label, .question input[type="date"] ~ label{
   text-transform: uppercase;
   font-style: italic;
-  -moz-transform: translate(5px, -35px) scale(0.7);
-  -ms-transform: translate(5px, -35px) scale(0.7);
-  -webkit-transform: translate(5px, -35px) scale(0.7);
-  transform: translate(5px, -35px) scale(0.7);
+  color: black;
+  font-weight: bold;
+}
+/*The following three do the same thing but with slightly different values so they line up*/
+.question input[type="text"]:valid ~ label{
+  -moz-transform: translate(-140%, 0px) scale(0.8);
+  -ms-transform: translate(-140%, 0px) scale(0.8);
+  -webkit-transform: translate(-140%, 0px) scale(0.8);
+  transform: translate(-140%, 0px) scale(0.8);
+}
+#modum:valid ~ label{
+  -moz-transform: translate(-43%, 0px) scale(0.8);
+  -ms-transform: translate(-43%, 0px) scale(0.8);
+  -webkit-transform: translate(-43%, 0px) scale(0.8);
+  transform: translate(-43%, 0px) scale(0.8);
+}
+.question input[type="date"] ~ label{
+  -moz-transform: translate(-124%, 0px) scale(0.8);
+  -ms-transform: translate(-124%, 0px) scale(0.8);
+  -webkit-transform: translate(-124%, 0px) scale(0.8);
+  transform: translate(-124%, 0px) scale(0.8);
+}
+/*Question p2*/
+.question2{
+  display: block;
+
+  height: 30px;
+
+  margin-top: 20px;
+}
+.question2 .btn, .question2 .btnPressed{
+  margin: 0px;
+}
+.question2 label{
+  float: left;
+  clear: left;
+
+  width: 50%;
+}
+.buttonPair{
+  position: relative;
+  float: left;
+
+  padding: 0px;
+  margin-top: -5px;
+  margin-left: 3%;
+}
+.finish2{
+  clear: both;
+}
+/*NAV section*/
+nav{
+  height: 7%;
+
+  padding: 2px;
+
+  background: #334433;
+}
+nav ul{
+  list-style: none;
+  margin: 4px;
+}
+nav ul li{
+  display: inline-block;
+
+  margin-top: 10px;
+}
+nav ul li a{
+  padding: 10px;
+
+  text-decoration: none;
+  color: white;
+  background: #333333;
+}
+nav ul li a:hover, nav ul li a:focus{
+  color: black;
+  background: white;
 }
