--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@
 
 html, body, main{
   width: 100%;
-  height: 97.76%;
 
   padding: 0px;
   marging: 0px;
@@ -25,10 +24,6 @@ article{
   background: #FFDDFF;
 }
 
-main{
-  background: blue;
-}
-
 .centerContent{
   width: 960px;
   height: 100%;
@@ -44,28 +39,28 @@ main{
 }
 
 footer{
+  clear: both;
+
   height: 3%;
   background: #234565;
+
+  bottom: 1px;
 }
 
 section{
   clear: both;
-
-  width: 100%;
 
   padding-top: 7px;
   padding-bottom: 17px;
 
   display: block;
 
-  background: #4b5320;
+  background: black;
 }
 
 h1{
-  width: 31%;
+  width: 40%;
   border-bottom: 2px solid black;
-  border-bottom-right-radius: 100%;
-  border-bottom-left-radius: 20%;
 }
 h3{
   margin-top: 18px;
@@ -238,7 +233,7 @@ nav ul li a, .btn, .question label, .question input[type="text"], .question inpu
   color: black;
   font-weight: bold;
 }
-#modum:focus ~ label{
+#modem:focus ~ label{
   -moz-transform: translate(-45%, 0px);
   -ms-transform: translate(-45%, 0px);
   -webkit-transform: translate(-45%, 0px);
@@ -258,7 +253,7 @@ nav ul li a, .btn, .question label, .question input[type="text"], .question inpu
   -webkit-transform: translate(-140%, 0px) scale(0.8);
   transform: translate(-140%, 0px) scale(0.8);
 }
-#modum:valid ~ label{
+#modem:valid ~ label{
   -moz-transform: translate(-43%, 0px) scale(0.8);
   -ms-transform: translate(-43%, 0px) scale(0.8);
   -webkit-transform: translate(-43%, 0px) scale(0.8);
@@ -275,6 +270,14 @@ nav ul li a, .btn, .question label, .question input[type="text"], .question inpu
   -ms-transform: translate(-7%, 0px) scale(0.78);
   -webkit-transform: translate(-7%, 0px) scale(0.78);
   transform: translate(-7%, 0px) scale(0.78);
+}
+@media screen and (max-width: 790px){
+  .question input[type="number"]:valid ~ label{
+    -moz-transform: translate(-27%, 0px) scale(0.78);
+    -ms-transform: translate(-27%, 0px) scale(0.78);
+    -webkit-transform: translate(-27%, 0px) scale(0.78);
+    transform: translate(-27%, 0px) scale(0.78);
+  }
 }
 /*Question p2*/
 .questionOption{
@@ -305,15 +308,26 @@ nav ul li a, .btn, .question label, .question input[type="text"], .question inpu
   clear: both;
 }
 /*Solution css*/
-.solutionContainer span{
-  /*width: auto;*/
+.solutions{
+  min-height: 145px;
 }
-span .liner{
+@media screen and (min-width: 790){
+  .solutions{
+    min-height: 124px;
+  }
+}
+.solutions .centerContent{
+  min-height: 100px;
+  padding: 10px;
+
+  border-radius: 10px;
+
+  background-color: rgba(255, 255, 255, 0.9);
+}
+.liner{
   display: block;
-}
-span .separator{
-  display: inline-block;
-  width: 5%;
+
+  border-bottom: 1px solid black;
 }
 .icon{
   display: inline-block;
@@ -321,27 +335,42 @@ span .separator{
   width: 18px;
   height: 18px;
 }
-.solutionContainer .name{
-  background: ../media/nameIcon.png;
+.solutionContainer{
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.solutionContainer .date{
-  background: ../media/dateIcon.png;
+.name{
+  background: url("../media/name.png") center center no-repeat;
+  background-size: contain;
 }
-.solutionContainer .modum{
-  background: ../media/modumIcon.png;
+.date{
+  background: url("../media/date.png") center center no-repeat;
+  background-size: contain;
 }
-.solutionContainer .aantalToestellen{
-  background: ../media/aantalToestellenIcon.png;
+.modem{
+  background: url("../media/modem.png") center center no-repeat;
+  background-size: contain;
+}
+.aantalToestellen{
+  background: url("../media/aantalToestellen.png") center center no-repeat;
+  background-size: contain;
 }
 .solutionContainer .valueName{
   font-family: fantasy;
   text-transform: capitalize;
+  color: #333333;
+}
+.solutionContainer .valueValue{
+  float: right;
+
+  font-weight: 400;
 }
 /*NAV section*/
 nav{
-  height: 7%;
+  height: 50px;
 
-  padding: 2px;
+  padding: 4px;
 
   background: #334433;
 }
